...
    );
  }

  Widget _buildTitle(BuildContext context) {
    final title = tier == UserTier.guest
        ? 'Log in to Continue'
        : 'Upgrade to Premium';

    return Text(
      title,
      style: Theme.of(
        context,
      ).textTheme.headlineSmall?.copyWith(fontWeight: FontWeight.bold),
...
